fix in latest gtk3 default theme background image not stretched

--- a/data/themes/Industrial/gtk.css
+++ b/data/themes/Industrial/gtk.css
@@ -1,5 +1,6 @@
 #lxdm {
-	background-image: url("wave.svg")
+	background-image: url("wave.svg");
+	background-size: 100%;
 }
 
 #bottom_pane {
